k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ollive
  labels:
    app.kubernetes.io/part-of: ollive-inference-logging
